# job-hunt-automation

./: .env.example  .gitignore  LICENSE  README.md  main.py  plan.md  pyproject.toml  run.md  run.ps1
config/: ats_directory.yaml  candidate_profile.example.yaml  source_catalog.yaml  target_companies.yaml
jobhunt/: cli.py  http_client.py  logging_config.py  scanning.py  scheduler.py  settings.py  targets.py
jobhunt/applications/: __init__.py  tracker.py
jobhunt/jobs/: __init__.py  dedupe.py  models.py  normalize.py  remote_classifier.py  scorer.py
jobhunt/profile/: __init__.py  builder.py  cv_extract.py  grounding.py  llm.py  models.py  store.py
jobhunt/reports/: console.py  export_csv.py
jobhunt/sources/: __init__.py  adzuna.py  arbeitnow.py  base.py  greenhouse.py  lever.py  reed.py  registry.py  remotive.py  usajobs.py
jobhunt/storage/: database.py  migrations.py  repositories.py
jobhunt/web/: __init__.py  app.py  deps.py  presentation.py  routes.py
tests/: conftest.py  test_adzuna_source.py  test_arbeitnow_source.py  test_cli.py  test_cv_extract.py  test_database.py  test_dedupe.py  test_export_csv.py  test_greenhouse_source.py  test_lever_source.py  test_normalize.py  test_presentation.py  test_profile_builder.py  test_profile_llm.py  test_profile_store.py  test_registry.py  test_remote_classifier.py  test_remotive_source.py  test_reports_console.py  test_scanning.py  test_scorer.py  test_settings.py  test_source_catalog.py  test_tracker.py  test_web.py
tests/fixtures/: adzuna_jobs_in.json  arbeitnow_jobs.json  greenhouse_jobs.json  lever_jobs.json  (+1 more)
(+18 files in other folders)
