[project]
name = "job-hunt-automation"
version = "0.1.0"
description = "Private remote-first job discovery and tracking assistant"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "SQLAlchemy>=2.0.0",
  "PyYAML>=6.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.2.0",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-httpx>=0.30.0",
  "freezegun>=1.5.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jobhunt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["research", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection defaults are idiomatic, not mutable-default bugs.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Form",
  "fastapi.Query",
  "fastapi.Header",
  "fastapi.File",
]
